objects/User_Access_Form__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deactivate_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivation_Effective_Date__c</fullName>
        <label>Deactivation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depar__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central Ops</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Dealer Services</fullName>
                </value>
                <value>
                    <fullName>Field Ops</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central Ops</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Residential Ops</fullName>
                </value>
                <value>
                    <fullName>Resi Install &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
                <value>
                    <fullName>Service Quality</fullName>
                </value>
                <value>
                    <fullName>Tech Support</fullName>
                </value>
                <value>
                    <fullName>Vendor - Non-Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envirnoment__c</fullName>
        <defaultValue>&quot;Production&quot;</defaultValue>
        <label>Salesforce Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>ProdCopy - Sandbox</fullName>
                </value>
                <value>
                    <fullName>Partial Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <defaultValue>&quot;L1&quot;</defaultValue>
        <label>Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <defaultValue>&quot;Walnut Creek, CA&quot;</defaultValue>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mirror_This_Users_Access__c</fullName>
        <label>Mirror This Users&apos; Access</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pro_User_Access__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro User Access</label>
        <referenceTo>Pro_User_Access_Form__c</referenceTo>
        <relationshipLabel>User Access Form</relationshipLabel>
        <relationshipName>User_Access_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New User</fullName>
                </value>
                <value>
                    <fullName>Update Existing User</fullName>
                </value>
                <value>
                    <fullName>Deactivate User</fullName>
                </value>
                <value>
                    <fullName>Reactivate User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Profile__c</fullName>
        <label>Salesforce Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                    <label>Admin - VP Approval Required</label>
                </value>
                <value>
                    <fullName>Call Center Agent</fullName>
                </value>
                <value>
                    <fullName>Dispatcher</fullName>
                    <label>Dispatcher - Scheduling</label>
                </value>
                <value>
                    <fullName>Lead</fullName>
                    <label>Lead - Team Leader or Supervisor</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                    <label>Manager - L2, L3, L4</label>
                </value>
                <value>
                    <fullName>Rep</fullName>
                    <label>Rep - MX, Tech Support, Basic Support User</label>
                </value>
                <value>
                    <fullName>Sales User</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                    <label>Technician - Pro</label>
                </value>
                <value>
                    <fullName>Technician Trainer</fullName>
                </value>
                <value>
                    <fullName>System Admin</fullName>
                    <label>System Admin - VP Approval Required</label>
                </value>
                <value>
                    <fullName>Smart Home Admin</fullName>
                    <label>Smart Home Admin - VP Approval Required</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>FSL Optimization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Role__c</fullName>
        <label>Salesforce Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Center</fullName>
                </value>
                <value>
                    <fullName>Support Leadership</fullName>
                </value>
                <value>
                    <fullName>Central Admin Leader</fullName>
                </value>
                <value>
                    <fullName>Central Admin</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Data Team Leader</fullName>
                </value>
                <value>
                    <fullName>Data Team</fullName>
                </value>
                <value>
                    <fullName>Monitoring Leader</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>MX Leader</fullName>
                </value>
                <value>
                    <fullName>MX</fullName>
                </value>
                <value>
                    <fullName>Tech Support Leader</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Virtual Pro</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_User_ID__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Permission_Set_Assignments__c</fullName>
        <label>Special Permission Set Assignments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field Service Lightning (Dispatcher, Resource, Mobile, etc.)</fullName>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Lead__c</fullName>
        <label>Team Lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_DealerTechnicianID__c</fullName>
        <label>Dealer Technician ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Entered_in_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Entered in SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_First_Name__c</fullName>
        <label>User First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Full_Name__c</fullName>
        <formula>User_First_Name__c + &apos; &apos; +User_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Last_Name__c</fullName>
        <label>User Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Name__c</fullName>
        <label>VP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>User Access Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>User_Full_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Activation_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Salesforce_Role__c</columns>
        <columns>Salesforce_Profile__c</columns>
        <columns>Department__c</columns>
        <columns>Depar__c</columns>
        <columns>User_Entered_in_SFDC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Entered_in_SFDC__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>U-{0}</displayFormat>
        <label>User Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Access Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>